--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,16 @@ body {
     font-family: 'Calibri';
 }
 
-.header {
+header {
     padding: 12px 12px 8px 12px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     position: fixed;
+    top: 0;
+    right: 0;
     border-bottom: 5px solid #f1fff1;
+    background-color: #ffffff;
 }
 
 .menu {
@@ -160,4 +163,14 @@ body {
 .subscribe-btn:hover {
     opacity: 0.9;
     cursor: pointer;
+}
+
+.section-1 {
+    margin-top: 40px;
+    background-image: url("../img/bg_header.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    width: 100%;
+    height: 800px;
 }
