--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,33 @@ body {
     opacity: 0.9;
     cursor: pointer;
 }
+.first_block span{
+    margin-left: 15px;
+    margin-right: 15px;
+    border: 1px solid;
+    /* padding: 9px; */
+    border-radius: 22px;
+    padding-left: 12px;
+    padding-right: 12px;
+    background: #eafff0;
+}
+.second_block span{
+    margin-left: 15px;
+    margin-right: 15px;
+    border: 1px solid;
+    /* padding: 9px; */
+    border-radius: 22px;
+    padding-left: 12px;
+    padding-right: 12px;
+    background: #eafff0;
+}
+.third_block{
+    margin-left: 15px;
+    margin-right: 15px;
+    border: 1px solid;
+    /* padding: 9px; */
+    border-radius: 22px;
+    padding-left: 12px;
+    padding-right: 12px;
+    background: #eafff0;
+}
