--- a/css/style.css
+++ b/css/style.css
@@ -172,5 +172,29 @@ header {
     background-repeat: no-repeat;
     background-position-y: bottom;
     width: 100%;
-    height: 800px;
+    height: 900px;
+}
+
+.facial-sheet-img {
+    background-image: url("../img/facial_sheet.png");
+    position: absolute;
+    transform: rotate(-10deg);
+    right: 300px;
+    top: 300px;
+    background-size: cover;
+    width: 20vw;
+    height: 26vw;
+	animation: float 6s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+        transform: translatey(0px) rotate(-10deg);
+	}
+	50% {
+        transform: translatey(-20px) rotate(-10deg);
+	}
+	100% {
+        transform: translatey(0px) rotate(-10deg);
+	}
 }
