--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header {
     right: 0;
     border-bottom: 5px solid #f1fff1;
     background-color: #ffffff;
+    z-index: 100;
 }
 
 .menu {
@@ -31,6 +32,7 @@ header {
     padding: 12px 12px;
     color: #969696;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .menu li:nth-of-type(-n+3) a {
@@ -120,6 +122,7 @@ header {
 }
 
 .dropdown-content-subscribe {
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -171,7 +174,6 @@ header {
     background-image: url("../img/bg_header.png");
     background-size: 100%;
     background-repeat: no-repeat;
-    background-position-y: bottom;
     width: 100%;
     height: 900px;
 }
@@ -180,12 +182,24 @@ header {
     background-image: url("../img/facial_sheet.png");
     position: absolute;
     transform: rotate(-10deg);
-    right: 300px;
-    top: 300px;
+    right: 25vw;
+    top: 15vw;
     background-size: cover;
     width: 20vw;
     height: 26vw;
 	animation: float 6s ease-in-out infinite;
+}
+
+@media screen and (min-width: 1600px) {
+    .section-1 {
+        background-position-y: bottom;
+    }
+}
+
+@media screen and (max-width: 1600px) {
+    .section-1 {
+        background-position-y: top;
+    }
 }
 
 @keyframes float {
@@ -199,6 +213,23 @@ header {
         transform: translatey(0px) rotate(-10deg);
 	}
 }
+
+.section-1-text {
+    position: absolute;
+    font-family: 'Calibri';
+    color: #a09e9e;
+    font-weight: bold;
+    font-size: 36px;
+    top: 20vw;
+    left: 10vw;
+    width: 500px;
+}
+
+.myth-word {
+    color: #02ffcc;
+    text-shadow: 4px 4px 4px #B3B5B4;
+}
+
 .first_block span{
     margin-left: 15px;
     margin-right: 15px;
