--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ header {
     background-size: 100%;
     background-repeat: no-repeat;
     width: 100%;
-    height: 900px;
+    z-index: 2;
 }
 
 .facial-sheet-img {
@@ -192,6 +192,7 @@ header {
 
 @media screen and (min-width: 1600px) {
     .section-1 {
+        height: 900px;
         background-position-y: bottom;
     }
 }
@@ -199,6 +200,7 @@ header {
 @media screen and (max-width: 1600px) {
     .section-1 {
         background-position-y: top;
+        height: 60vw;
     }
 }
 
@@ -225,7 +227,7 @@ header {
     width: 500px;
 }
 
-.myth-word {
+.selected-words {
     color: #02ffcc;
     text-shadow: 4px 4px 4px #B3B5B4;
 }
@@ -234,13 +236,76 @@ header {
     margin-top: 50px;
     background-color: #ffffff;
     width: 100%;
+    max-width: 100vw;
     display: flex;
     justify-content: space-evenly;
     overflow: hidden;
 }
 
 .bubble {
+    display: none;
     position: absolute;
+    left: 0;
+    top: 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    box-shadow: -12px 19px 82px -19px rgba(0,0,0,0.75);
+    z-index: 1;
+}
+
+.bubble_1 {
+    background-image: url("../img/bubble_1.png");
+    width: 6vw;
+    height: 6vw;
+}
+
+.bubble_2 {
+    background-image: url("../img/bubble_2.png");
+    width: 6vw;
+    height: 6vw;
+}
+
+.bubble_3 {
+    background-image: url("../img/bubble_3.png");
+    width: 5vw;
+    height: 5vw;
+}
+
+.bubble_4 {
+    background-image: url("../img/bubble_4.png");
+    width: 4vw;
+    height: 4vw;
+}
+
+.bubble_5 {
+    background-image: url("../img/bubble_5.png");
+    width: 4vw;
+    height: 4vw;
+}
+
+.bubble_6 {
+    background-image: url("../img/bubble_6.png");
+    width: 4vw;
+    height: 4vw;
+}
+
+.bubble_7 {
+    background-image: url("../img/bubble_7.png");
+    width: 5vw;
+    height: 5vw;
+}
+
+.bubble_8 {
+    background-image: url("../img/bubble_8.png");
+    width: 6vw;
+    height: 6vw;
+}
+
+.bubble_9 {
+    background-image: url("../img/bubble_9.png");
+    width: 6vw;
+    height: 6vw;
 }
 
 .facial-sheet-with-circles-img {
@@ -248,6 +313,7 @@ header {
     background-size: contain;
     width: 30vw;
     height: 30vw;
+    z-index: 2;
 }
 
 .section-2-text {
@@ -264,6 +330,119 @@ header {
 .section-2-text p {
     font-size: 15px;
     color: #6d6d6d;
+}
+
+.section-3 {
+    background-color: #fafafa;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-3 p {
+    width: 30vw;
+    font-size: 15px;
+    color: #6d6d6d;
+    margin-bottom: 70px;
+}
+
+.section-3 h2 {
+    margin-top: 70px;
+    color: #535353;
+    font-family: 'Calibri';
+    font-size: 26px;
+}
+
+.section-3-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.facial-sheet-on-board-img {
+    width: 25vw;
+    height: 25vw;
+    background-color: red;
+}
+
+.slider {
+    width: 30vw;
+    height: 300px;
+    margin-left: 5vw;
+}
+
+.slide {
+    outline: none;
+}
+
+.slide-header {
+    display: flex;
+    align-items: center;
+}
+
+.slide-title {
+    font-size: 16px;
+    font-weight: bold;
+    color: #6d6d6d;
+    margin-left: 10px;
+}
+
+.slide-number {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 18px;
+    border-radius: 50%;
+    border: 2px solid #6d6d6d;
+    background-color: #eaffed;
+}
+
+.slide-description {
+    font-size: 14px;
+    color: #535353;
+}
+
+.slide-img {
+    width: 80px;
+    height: 40px;
+    margin: 25px 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.slide1-img {
+    background-image: url("../img/slide1_image.png");
+}
+
+.slide2-img {
+    background-image: url("../img/slide2_image.png");
+}
+
+.slide3-img {
+    background-image: url("../img/slide3_image.png");
+}
+
+.slide4-img {
+    background-image: url("../img/slide4_image.png");
+}
+
+.slide5-img {
+    background-image: url("../img/slide5_image.png");
+}
+
+.discover-btn {
+    float: right;
+    margin: 10px 80px;
+    padding: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #15e2a0;
+    text-decoration: none;
+    background-color: #fafafa;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.19);
+    -moz-box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.19);
+    box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.19);
+    outline: none;
 }
 
 .first_block span{
